# pcl

./: cloud_visualizer  cloud_visualizer_rgb  cloud_visualizer_rgba
Features/normal_cloud/: CMakeLists.txt  normal_cloud.cpp
Filtering/: table.pcdoutliers.pcd
Filtering/Conditional_or_RadiusOutlier_removal/: CMakeLists.txt
Filtering/downsampling/: CMakeLists.txt  out.pcd  voxel_grid.cpp
Filtering/extracting_indices/: extract_indices  extract_indices.cpp  source.pcd
Filtering/filterPassThrough/: CMakeLists.txt  passThrough.cpp
Filtering/projecting_points/: project_inliers.cpp
Filtering/statistical_outlier_removal_filter/: CMakeLists.txt  statistical_removal.cpp
Segmentation/DoN/: don_segmentation.cpp
Segmentation/EuclideanClusterExtraction/: cluster_extraction.cpp
Segmentation/bagfile_segmentation/: CMakeLists.txt  bagfile_segmentation.cpp  demo_pcl.cpp  processing.cpp  processing.h
Segmentation/color_based/: CMakeLists.txt  region_growing_rgb_segmentation.cpp
Segmentation/min_cut/: CMakeLists.txt  min_cut_segmentation.cpp
Segmentation/region_growing/: CMakeLists.txt  region_growing_segmentation.cpp
data/: pass_through.pcd  pass_through_nearest_plane.pcd  region_growing.pcd
get_data_from_lidar/: CMakeLists.txt  alignedPCL.py  convert_to_pcd.cpp
pcl_template/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  pcd_write
python/: get_data_from_file.py
python/pallet_detect/: data_analysis.ipynb  downsample.pcd  filtering.py  pc_rack.txt  stat_outlier.pcd  stat_outlier.py
python/pallet_detect/.ipynb_checkpoints/: 1_Семинар_по_numpy_Воробьев_Тихон-checkpoint.ipynb  2_Sparse_coding_Odinokikh-checkpoint.ipynb  color_correction-checkpoint.ipynb  data_analysis-checkpoint.ipynb  pc_rack-checkpoint.txt
visualisation/: CMakeLists.txt  visualize_pcd.cpp
